검색 및 정렬 기능 구현

--- a/board/src/main/resources/templates/articles/index.html
+++ b/board/src/main/resources/templates/articles/index.html
@@ -57,30 +57,30 @@
             </div>
         </div>
     </div>
-    <!--    <form>-->
-    <!--        <label>-->
-    <!--            <select name="search-type">-->
-    <!--                <option>제목</option>-->
-    <!--                <option>본문</option>-->
-    <!--                <option>ID</option>-->
-    <!--                <option>닉네임</option>-->
-    <!--                <option>해시태그</option>-->
-    <!--            </select>-->
-    <!--        </label>-->
-    <!--        <label>-->
-    <!--            <input type="search" placeholder="검색어..." name="search-value">-->
-    <!--        </label>-->
-    <!--    </form>-->
-    <!--    <label>-->
-    <!--        <button type="submit">검색</button>-->
-    <!--    </label>-->
+<!--    <form>-->
+<!--        <label>-->
+<!--            <select name="search-type">-->
+<!--                <option>제목</option>-->
+<!--                <option>본문</option>-->
+<!--                <option>ID</option>-->
+<!--                <option>닉네임</option>-->
+<!--                <option>해시태그</option>-->
+<!--            </select>-->
+<!--        </label>-->
+<!--        <label>-->
+<!--            <input type="search" placeholder="검색어..." name="search-value">-->
+<!--        </label>-->
+<!--    </form>-->
+<!--    <label>-->
+<!--        <button type="submit">검색</button>-->
+<!--    </label>-->
     <table class="table" id="article-table">
         <thead>
         <tr>
-            <th class="title col-6">제목</th>
-            <th class="hashtag col-2">해시태그</th>
-            <th class="user-id col-2">작성자</th>
-            <th class="create-by col-2">작성일</th>
+            <th class="title col-6"><a>제목</a></th>
+            <th class="hashtag col-2"><a>해시태그</a></th>
+            <th class="user-id col-2"><a>작성자</a></th>
+            <th class="create-by col-2"><a>작성일</a></th>
         </tr>
         </thead>
         <tbody>
