--- a/board/src/main/resources/templates/header.html
+++ b/board/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>header</title>
+  <title>Title</title>
 </head>
 <body>
 <header class="p-3 bg-dark text-white">
@@ -14,9 +14,8 @@
       </ul>
 
       <div class="text-end">
-        <span id="username" class="text-white me-2">username</span>
-        <a role="button" id="login" class="btn btn-outline-light me-2">Login</a>
-        <a role="button" id="logout" class="btn btn-outline-light me-2">Logout</a>
+        <button type="button" class="btn btn-outline-light me-2">Login</button>
+        <button type="button" class="btn btn-warning">Sign-up</button>
       </div>
     </div>
   </div>
